# protoTest

./: BUILD.bazel  BUILD.bazel.expected  README.md  WORKSPACE  a.proto  b.proto  foo.go
foo/: x.proto
