load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "a_proto",
    srcs = ["foo/x.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "a_go_proto",
    importpath = "github.com/Xjs/protoTest/a",
    proto = ":a_proto",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "b_proto",
    srcs = ["foo/b.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "b_go_proto",
    importpath = "github.com/Xjs/protoTest/b",
    proto = ":b_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["foo.go"],
    importpath = "main",
    visibility = ["//visibility:private"],
    deps = [
        ":a_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "main",
    goos = "linux",
    goarch = "amd64",
    pure = "on",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
